--- a/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
+++ b/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
@@ -84,7 +84,11 @@ End-to-end latency results are reported in milliseconds (ms). Vertical axes are 
 
 ### Executive Summary
 
-Overall, a major improvement over previous versions is that we no longer see large spikes in maximum latencies. This is possibly due to improvements in the driver software. We observe improvement in performance compared to v3.0 in the experiments with "As Fast As Possible" mode for both applications. For v3.3 data collection, we added an additional python and event-based scheduler benchmark. We observe that the performance of the python version is comparable to the Cpp version in most cases. Though the average latency of the python version is slightly better, the 99.9th percentile and maximum latencies are slightly worse (Ex: 63.40ms vs 38.86ms on x86_64 (A6000)). However, the event-based scheduler has significantly worse maximum latency compared to the greedy scheduler for the multi-ai ultrasound application (Ex: 123.0ms vs 74.38ms on IGX-iGPU). This is likely due to the application not having much parallelism to exploit. We also added a long-running benchmark with 100,000 input frames and found that the execution time was stable and did not show any large spikes. We also compare the performance of Endoscopy Tool Tracking with and without the Holoviz Mutex optimization. This optimization helps achieve more predictable maximum end-to-end latencies. We found that enabling it did not result in any significant regression in performance, while mitigating large spikes observed in previous reports.
+Overall, a major improvement over previous versions is that we no longer see large spikes in maximum latencies. This is perhaps due to improvements in our driver software. We observe improvement in performance compared to v3.0 in the experiments with "As Fast As Possible" mode for both applications. For this report, we add an additional python and event-based scheduler benchmark. We observe that the performance of the python version is comparable to the Cpp version in most cases. Though the average latency of the python version is slightly better, the 99.9th percentile and maximum latencies are slightly worse (Ex: 63.40ms vs 38.86ms on x86_64 (A6000)). 
+
+The event-based scheduler has significantly worse maximum latency compared to the greedy scheduler for the multi-ai ultrasound application (Ex: 123.0ms vs 74.38ms on IGX-iGPU). This is likely due to the application not having much parallelism to exploit. 
+
+We also add a long-running benchmark with 100,000 input frames and found that the end-to-end latency was stable and did not show any large spikes. Finally, we compare the performance of Endoscopy Tool Tracking with and without the Holoviz Mutex optimization. This optimization helps achieve more predictable maximum end-to-end latencies in case of simultaneously running Holoscan applications using visualization. We found that enabling it does not result in any significant regression in performance, while mitigating large spikes observed in previous reports for higher number of application instances.
 
 ### Comparison: Endoscopy Tool Tracking in "As Fast As Possible" Video Input Mode
 
