--- a/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
+++ b/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
@@ -47,7 +47,7 @@ In each case:
     - 100,000 input frames
     - x86_64 with ADA6000 GPU
     - 1-2 instances
-- We compared results without and without enabling [Holoviz Mutex](https://docs.nvidia.com/holoscan/sdk-user-guide/visualization.html#multiprocess-synchronization) Optimization
+- We compared results with and without enabling [Holoviz Mutex](https://docs.nvidia.com/holoscan/sdk-user-guide/visualization.html#multiprocess-synchronization) Optimization
     - 1-5 instances on x86_64 with ADA6000 GPU 
     -  1-3 instances on IGX with A6000 dGPU
 
