added holoviz mutex benchmarks
Signed-off-by: Vani Nagarajan <vanin@nvidia.com>

--- a/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
+++ b/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
@@ -156,28 +156,28 @@ Negative values indicate speedup with comparison to v3.0.0 results, while positi
 
 #### Holoviz Mutex Optimization
 
-| Statistic | x86_64 (ADA6000) | IGX dGPU (A6000) |
-| ---------------------------- | ------ | ------ |
-| Mean | ![image](holoviz_mutex_comparison_plots/x86/avg_comparison.png) | ![image](holoviz_mutex_comparison_plots/IGX/avg_comparison.png) |
-| 90% | ![image](holoviz_mutex_comparison_plots/x86/percentile_90_0_comparison.png) | ![image](holoviz_mutex_comparison_plots/IGX/percentile_90_0_comparison.png) |
-| 95% | ![image](holoviz_mutex_comparison_plots/x86/percentile_95_0_comparison.png) | ![image](holoviz_mutex_comparison_plots/IGX/percentile_95_0_comparison.png) |
-| 99% | ![image](holoviz_mutex_comparison_plots/x86/percentile_99_0_comparison.png) | ![image](holoviz_mutex_comparison_plots/IGX/percentile_99_0_comparison.png) |
-| 99.9% | ![image](holoviz_mutex_comparison_plots/x86/percentile_99_9_comparison.png) | ![image](holoviz_mutex_comparison_plots/IGX/percentile_99_9_comparison.png) |
-| Max | ![image](holoviz_mutex_comparison_plots/x86/max_comparison.png) | ![image](holoviz_mutex_comparison_plots/IGX/max_comparison.png) |
-| Std Deviation | ![image](holoviz_mutex_comparison_plots/x86/stddev_comparison.png) | ![image](holoviz_mutex_comparison_plots/IGX/stddev_comparison.png) |
+| Statistic | IGX dGPU (A6000) |
+| ---------------------------- | ------ |
+| Mean | <img src="holoviz_mutex_comparison_plots/endoscopy_tool_tracking_avg.png" width="400" height="400"> |
+| 90% | <img src="holoviz_mutex_comparison_plots/endoscopy_tool_tracking_percentile90.png" width="400" height="400"> |
+| 95% | <img src="holoviz_mutex_comparison_plots/endoscopy_tool_tracking_percentile95.png" width="400" height="400"> |
+| 99% | <img src="holoviz_mutex_comparison_plots/endoscopy_tool_tracking_percentile99.png" width="400" height="400"> |
+| 99.9% | <img src="holoviz_mutex_comparison_plots/endoscopy_tool_tracking_percentile99_9.png" width="400" height="400"> |
+| Max | <img src="holoviz_mutex_comparison_plots/endoscopy_tool_tracking_max.png" width="400" height="400"> |
+| Std Deviation | <img src="holoviz_mutex_comparison_plots/endoscopy_tool_tracking_stddev.png" width="400" height="400"> |
 
 
 #### Long-running Experiment
 
 | Statistic                    | x86_64 (ADA6000) | 
 | ---------------------------- | ------ | 
-| Mean                         | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_avg.png" width="300" height="300"> |
-| 90%                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_90.0.png" width="300" height="300"> |
-| 95%                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_95.0.png" width="300" height="300"> |
-| 99%                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_99.0.png" width="300" height="300"> |
-| 99.9%                        | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_99.9.png" width="300" height="300"> |
-| Max                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_max.png" width="300" height="300"> |
-| Std Deviation                | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_stddev.png" width="300" height="300"> |
+| Mean                         | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_avg.png" width="400" height="400"> |
+| 90%                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_90.0.png" width="400" height="400"> |
+| 95%                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_95.0.png" width="400" height="400"> |
+| 99%                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_99.0.png" width="400" height="400"> |
+| 99.9%                        | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_percentile_99.9.png" width="400" height="400"> |
+| Max                          | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_max.png" width="400" height="400"> |
+| Std Deviation                | <img src="x86_64_ADA6000/long_running_endoscopy_tool_tracking_realtime_display/endoscopy_tool_tracking_stddev.png" width="400" height="400"> |
 
 ### Multi-AI Ultrasound 
 
