--- a/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
+++ b/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
@@ -45,8 +45,7 @@ In each case:
     - For Endoscopy Tool Tracking, we also ran the python version.
 - We included a long-running benchmark for Endoscopy Tool Tracking.
     - 100,000 input frames
-    - x86_64 with ADA6000 GPU
-    - 1-2 instances
+    - 1-2 instances on x86_64 with ADA6000 GPU
 - We compared results with and without enabling [Holoviz Mutex](https://docs.nvidia.com/holoscan/sdk-user-guide/visualization.html#multiprocess-synchronization) Optimization
     - 1-3 instances on IGX with A6000 dGPU
 
@@ -61,6 +60,8 @@ We delineate results by the following configurations:
         - "As Fast As Possible" input with display
     - Long-running Benchmark
         - Real-time input with display
+    - Holoviz Mutex Optimization
+        - "As Fast As Possible" input with display
 - Multi-AI Ultrasound
     - Greedy Scheduler
         - Real-time input with display
