--- a/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
+++ b/benchmarks/release_benchmarking/release/v3.3.0/v3.3.md
@@ -41,7 +41,7 @@ In each case:
 - We ran each application three times per configuration.
 - We ran the application with greedy scheduling. 
     - For Multi-AI Ultrasound, we also ran with event-based scheduling.
-- We ran the Cpp version of the applications. 
+- We ran the C++ version of the applications. 
     - For Endoscopy Tool Tracking, we also ran the python version.
 - We included a long-running benchmark for Endoscopy Tool Tracking.
     - 100,000 input frames
@@ -52,7 +52,7 @@ In each case:
 We delineate results by the following configurations:
 
 - Endoscopy Tool Tracking
-    - Cpp Version
+    - C++ Version
         - Real-time input with display
         - "As Fast As Possible" input with display
         - "As Fast As Possible" input in headless mode
@@ -84,7 +84,7 @@ End-to-end latency results are reported in milliseconds (ms). Vertical axes are 
 
 ### Executive Summary
 
-Overall, a major improvement over previous versions is that we no longer see large spikes in maximum latencies. This is perhaps due to improvements in our driver software. We observe improvement in performance compared to v3.0 in the experiments with "As Fast As Possible" mode for both applications. For this report, we add an additional python and event-based scheduler benchmark. We observe that the performance of the python version is comparable to the Cpp version in most cases. Though the average latency of the python version is slightly better, the 99.9th percentile and maximum latencies are slightly worse (Ex: 63.40ms vs 38.86ms on x86_64 (A6000)). 
+Overall, a major improvement over previous versions is that we no longer see large spikes in maximum latencies. This is perhaps due to improvements in our driver software. We observe improvement in performance compared to v3.0 in the experiments with "As Fast As Possible" mode for both applications. For this report, we add an additional python and event-based scheduler benchmark. We observe that the performance of the python version is comparable to the C++ version in most cases. Though the average latency of the python version is slightly better, the 99.9th percentile and maximum latencies are slightly worse (Ex: 63.40ms vs 38.86ms on x86_64 (A6000)). 
 
 The event-based scheduler has significantly worse maximum latency compared to the greedy scheduler for the Multi-AI Ultrasound application (Ex: 123.0ms vs 74.38ms on IGX-iGPU). This is likely due to the application not having much parallelism to exploit. 
 
@@ -106,7 +106,7 @@ Negative values indicate speedup with comparison to v3.0.0 results, while positi
 
 ### Endoscopy Tool Tracking 
 
-#### Real-Time Video Input - Cpp Version
+#### Real-Time Video Input - C++ Version
 
 | Statistic | x86_64 (A6000) | x86_64 (ADA6000) | IGX iGPU | IGX dGPU (A6000) | IGX dGPU (ADA6000) |
 | ---------------------------- | ------ | ------ | -------- | -------- | -------- |
@@ -118,7 +118,7 @@ Negative values indicate speedup with comparison to v3.0.0 results, while positi
 | Max                         | ![image](x86_64_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_max.png)| ![image](x86_64_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_max.png)| ![image](IGX_iGPU/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_max.png)| ![image](IGX_dGPU_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_max.png)| ![image](IGX_dGPU_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_max.png)|
 | Std Deviation                         | ![image](x86_64_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_stddev.png)| ![image](x86_64_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_stddev.png)| ![image](IGX_iGPU/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_stddev.png)| ![image](IGX_dGPU_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_stddev.png)| ![image](IGX_dGPU_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_realtime/endoscopy_tool_tracking_stddev.png)|
 
-#### "As Fast As Possible" Video Input - Cpp Version
+#### "As Fast As Possible" Video Input - C++ Version
 
 | Statistic | x86_64 (A6000) | x86_64 (ADA6000) | IGX iGPU | IGX dGPU (A6000) | IGX dGPU (ADA6000) |
 | ---------------------------- | ------ | ------ | -------- | -------- | -------- |
@@ -130,7 +130,7 @@ Negative values indicate speedup with comparison to v3.0.0 results, while positi
 | Max                         | ![image](x86_64_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_max.png)| ![image](x86_64_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_max.png)| ![image](IGX_iGPU/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_max.png)| ![image](IGX_dGPU_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_max.png)| ![image](IGX_dGPU_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_max.png)|
 | Std Deviation                         | ![image](x86_64_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_stddev.png)| ![image](x86_64_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_stddev.png)| ![image](IGX_iGPU/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_stddev.png)| ![image](IGX_dGPU_A6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_stddev.png)| ![image](IGX_dGPU_ADA6000/endoscopy_tool_tracking_3_\[0-9\]_1000_greedy_display_offline/endoscopy_tool_tracking_stddev.png)|
 
-#### "As Fast As Possible" Video Input and Headless Output - Cpp Version
+#### "As Fast As Possible" Video Input and Headless Output - C++ Version
 
 | Statistic | x86_64 (A6000) | x86_64 (ADA6000) | IGX iGPU | IGX dGPU (A6000) | IGX dGPU (ADA6000) |
 | ---------------------------- | ------ | ------ | -------- | -------- | -------- |
